# qwen3-tts-cli

./: .gitignore  README.md  pyproject.toml
src/qwen3tts/: cli.py  generate.py
